rke2/role/deploy_app/files/argocd_yaml/metrics-agent/metrics-agent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-agent-deployment
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metrics-agent-app
  template:
    metadata:
      labels:
        app: metrics-agent-app
    spec:
      restartPolicy: Always
      nodeSelector:
        node-role.kubernetes.io/worker: "true"

      containers:
      - name: metrics-agent-app
        image: "REGISTRYIP/test/metrics-agent:0.0.1"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: metrics-agent-server-log-volume
          mountPath: /logs
      - name: metrics-agent-fluent-bit
        image: "REGISTRYIP/bitnami/fluent-bit:2.2.0"
        volumeMounts:
        - name: metrics-agent-server-log-volume
          mountPath: /logs
        - name: metrics-agent-config
          mountPath: /opt/bitnami/fluent-bit/conf/fluent-bit.conf
          subPath: fluent-bit.conf
        - name: metrics-agent-parser
          mountPath: /opt/bitnami/fluent-bit/conf/parsers.conf
          subPath: parsers.conf

      volumes:
      - name: metrics-agent-server-log-volume
        emptyDir: {}
      - name: metrics-agent-config
        configMap:
          name: metrics-agent-fluentbit-configmap
          items:
          - key: fluent-bit.conf
            path: fluent-bit.conf
      - name: metrics-agent-parser
        configMap:
          name: metrics-agent-fluentbit-configmap
          items:
          - key: parsers.conf
            path: parsers.conf
